--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Messagerie</title>
   </head>
   <body>
@@ -15,5 +15,6 @@
         <button id="send" value="">OK</button>
       </div>
     </div>
+    <script src="js/messagerie.js"></script>
   </body>
 </html>
