--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Messagerie</title>
   </head>
   <body>
     <div id="main">
-      <div id="messages"></div>
-      <div id="container">
-        <input type="text" name="message" id="message" />
-        <button id="send" value="">OK</button>
+      <div id="content">
+        <div id="messages"></div>
+        <div id="container">
+          <input type="text" name="message" id="message" />
+          <button id="send" value="">OK</button>
+        </div>
       </div>
     </div>
     <script src="js/messagerie.js"></script>
