--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <title>Messagerie</title>
   </head>
   <body>
+    
     <div id="main">
+        <h1 id="title">Tchat M'R</h1>
       <div id="messages"></div>
       <div id="container">
         <input type="text" name="message" id="message" />
