--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>Messagerie</title>
   </head>
   <body>
-    <div id="main">
+    <div id="parent">
       <h1 id="title">Tchat M'R</h1>
       <div id="content">
         <div id="messages"></div>
-        <div id="container">
+         <div id="container">
           <div>
             <input id="message" />
             <ion-icon size="large" name="send" id="send"></ion-icon>
@@ -23,6 +23,7 @@
         </div>
       </div>
     </div>
+  </div>
     <script src="js/messagerie.js"></script>
   </body>
 </html>
