--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Messagerie</title>
   </head>
   <body>
-    <div id="parent">
+    <div id="main">
       <h1 id="title">Tchat M'R</h1>
       <div id="content">
         <div id="messages"></div>
@@ -19,6 +19,8 @@
             <input id="message" />
             <ion-icon size="large" name="send" id="send"></ion-icon>
           </div>
+          <ion-icon size="large" name="happy" id="btn_smileys"></ion-icon>
+          <div id='smileys'></div>
           <ion-icon size="large" name="refresh" id="reset"></ion-icon>
         </div>
       </div>
